--- a/data_preprocessing.ipynb
+++ b/data_preprocessing.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,18 @@
     "import numpy as np\n",
     "from altair import datum\n",
     "import streamlit as st\n",
-    "import datetime"
+    "import datetime\n",
+    "\n",
+    "import altair_saver"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import altair_viewer"
    ]
   },
   {
@@ -36,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -255,7 +266,7 @@
        "4  POINT (-73.76041066999993 40.67374017600008)  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -266,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -280,7 +291,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -291,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -301,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -351,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -362,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -371,7 +382,7 @@
        "(25596, 9344)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -393,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -508,7 +519,7 @@
        "12       longitude           0"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -544,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -801,7 +812,7 @@
        "[6 rows x 22 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -812,7 +823,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -822,7 +833,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -833,7 +844,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -906,7 +917,7 @@
        "5  STATEN ISLAND      487155"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -929,7 +940,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1021,7 +1032,7 @@
        "4  MULTIPOLYGON (((-73.82645 40.59053, -73.82642 ...  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1032,7 +1043,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1124,7 +1135,7 @@
        "4  MULTIPOLYGON (((-73.82645 40.59053, -73.82642 ...  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1140,7 +1151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1150,7 +1161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1175,7 +1186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1186,81 +1197,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "\n",
-       "<div id=\"altair-viz-f40398ec08d6476fae6ec274e6479f76\"></div>\n",
+       "<div id=\"altair-chart-685212b6aedb40a386847e5ef90228d7\"></div>\n",
        "<script type=\"text/javascript\">\n",
-       "  var VEGA_DEBUG = (typeof VEGA_DEBUG == \"undefined\") ? {} : VEGA_DEBUG;\n",
-       "  (function(spec, embedOpt){\n",
-       "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-f40398ec08d6476fae6ec274e6479f76\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-f40398ec08d6476fae6ec274e6479f76\");\n",
-       "    }\n",
-       "    const paths = {\n",
-       "      \"vega\": \"https://cdn.jsdelivr.net/npm//vega@5?noext\",\n",
-       "      \"vega-lib\": \"https://cdn.jsdelivr.net/npm//vega-lib?noext\",\n",
-       "      \"vega-lite\": \"https://cdn.jsdelivr.net/npm//vega-lite@4.17.0?noext\",\n",
-       "      \"vega-embed\": \"https://cdn.jsdelivr.net/npm//vega-embed@6?noext\",\n",
+       "  (function(spec, embedOpt) {\n",
+       "    const outputDiv = document.getElementById(\"altair-chart-685212b6aedb40a386847e5ef90228d7\");\n",
+       "    const urls = {\n",
+       "      \"vega\": \"http://localhost:57222/scripts/vega.js\",\n",
+       "      \"vega-lite\": \"http://localhost:57222/scripts/vega-lite.js\",\n",
+       "      \"vega-embed\": \"http://localhost:57222/scripts/vega-embed.js\",\n",
        "    };\n",
-       "\n",
-       "    function maybeLoadScript(lib, version) {\n",
-       "      var key = `${lib.replace(\"-\", \"\")}_version`;\n",
-       "      return (VEGA_DEBUG[key] == version) ?\n",
-       "        Promise.resolve(paths[lib]) :\n",
-       "        new Promise(function(resolve, reject) {\n",
-       "          var s = document.createElement('script');\n",
-       "          document.getElementsByTagName(\"head\")[0].appendChild(s);\n",
-       "          s.async = true;\n",
-       "          s.onload = () => {\n",
-       "            VEGA_DEBUG[key] = version;\n",
-       "            return resolve(paths[lib]);\n",
-       "          };\n",
-       "          s.onerror = () => reject(`Error loading script: ${paths[lib]}`);\n",
-       "          s.src = paths[lib];\n",
-       "        });\n",
+       "    function loadScript(lib) {\n",
+       "      return new Promise(function(resolve, reject) {\n",
+       "        var s = document.createElement('script');\n",
+       "        s.src = urls[lib];\n",
+       "        s.async = true;\n",
+       "        s.onload = () => resolve(urls[lib]);\n",
+       "        s.onerror = () => reject(`Error loading script: ${urls[lib]}`);\n",
+       "        document.getElementsByTagName(\"head\")[0].appendChild(s);\n",
+       "      });\n",
        "    }\n",
-       "\n",
        "    function showError(err) {\n",
        "      outputDiv.innerHTML = `<div class=\"error\" style=\"color:red;\">${err}</div>`;\n",
        "      throw err;\n",
        "    }\n",
-       "\n",
        "    function displayChart(vegaEmbed) {\n",
        "      vegaEmbed(outputDiv, spec, embedOpt)\n",
        "        .catch(err => showError(`Javascript Error: ${err.message}<br>This usually means there's a typo in your chart specification. See the javascript console for the full traceback.`));\n",
        "    }\n",
        "\n",
        "    if(typeof define === \"function\" && define.amd) {\n",
-       "      requirejs.config({paths});\n",
-       "      require([\"vega-embed\"], displayChart, err => showError(`Error loading script: ${err.message}`));\n",
+       "        // requirejs paths need '.js' extension stripped.\n",
+       "        const paths = Object.keys(urls).reduce(function(paths, package) {\n",
+       "            paths[package] = urls[package].replace(/\\.js$/, \"\");\n",
+       "            return paths\n",
+       "        }, {})\n",
+       "        requirejs.config({paths});\n",
+       "        require([\"vega-embed\"], displayChart, err => showError(`Error loading script: ${err.message}`));\n",
+       "    } else if (typeof vegaEmbed === \"function\") {\n",
+       "        displayChart(vegaEmbed);\n",
        "    } else {\n",
-       "      maybeLoadScript(\"vega\", \"5\")\n",
-       "        .then(() => maybeLoadScript(\"vega-lite\", \"4.17.0\"))\n",
-       "        .then(() => maybeLoadScript(\"vega-embed\", \"6\"))\n",
-       "        .catch(showError)\n",
-       "        .then(() => displayChart(vegaEmbed));\n",
+       "        loadScript(\"vega\")\n",
+       "            .then(() => loadScript(\"vega-lite\"))\n",
+       "            .then(() => loadScript(\"vega-embed\"))\n",
+       "            .catch(showError)\n",
+       "            .then(() => displayChart(vegaEmbed));\n",
        "    }\n",
-       "  })({\"data\": {\"name\": \"data-89f1c4e69698a792a838760f428db649\"}, \"mark\": {\"type\": \"bar\", \"tooltip\": true}, \"encoding\": {\"x\": {\"field\": \"boro\", \"type\": \"nominal\"}, \"y\": {\"aggregate\": \"count\", \"field\": \"population\", \"type\": \"quantitative\"}}, \"$schema\": \"https://vega.github.io/schema/vega-lite/v4.17.0.json\", \"datasets\": {\"data-89f1c4e69698a792a838760f428db649\": [{\"boro\": \"NYC TOTAL\", \"population\": 8550971}, {\"boro\": \"BRONX\", \"population\": 1446788}, {\"boro\": \"BROOKLYN\", \"population\": 2648452}, {\"boro\": \"MANHATTAN\", \"population\": 1638281}, {\"boro\": \"QUEENS\", \"population\": 2330295}, {\"boro\": \"STATEN ISLAND\", \"population\": 487155}]}}, {\"mode\": \"vega-lite\"});\n",
-       "</script>"
+       "  })({\"data\": {\"name\": \"data-89f1c4e69698a792a838760f428db649\"}, \"mark\": {\"type\": \"bar\", \"tooltip\": true}, \"encoding\": {\"x\": {\"field\": \"boro\", \"type\": \"nominal\"}, \"y\": {\"aggregate\": \"count\", \"field\": \"population\", \"type\": \"quantitative\"}}, \"$schema\": \"https://vega.github.io/schema/vega-lite/v4.17.0.json\", \"datasets\": {\"data-89f1c4e69698a792a838760f428db649\": [{\"boro\": \"NYC TOTAL\", \"population\": 8550971}, {\"boro\": \"BRONX\", \"population\": 1446788}, {\"boro\": \"BROOKLYN\", \"population\": 2648452}, {\"boro\": \"MANHATTAN\", \"population\": 1638281}, {\"boro\": \"QUEENS\", \"population\": 2330295}, {\"boro\": \"STATEN ISLAND\", \"population\": 487155}]}}, {});\n",
+       "</script>\n"
       ],
       "text/plain": [
        "alt.Chart(...)"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "alt.Chart(boro_pop).mark_bar(tooltip= True).encode(\n",
+    "chart = alt.Chart(boro_pop).mark_bar(tooltip= True).encode(\n",
     "    x= alt.X(\"boro:N\"),\n",
-    "    y=alt.Y(\"count(population)\"))"
+    "    y=alt.Y(\"count(population)\"))\n",
+    "\n",
+    "alt.renderers.enable('altair_viewer', inline=True)\n",
+    "chart\n"
    ]
   }
  ],
