--- a/data_preprocessing.ipynb
+++ b/data_preprocessing.ipynb
@@ -1197,67 +1197,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "\n",
-       "<div id=\"altair-chart-685212b6aedb40a386847e5ef90228d7\"></div>\n",
-       "<script type=\"text/javascript\">\n",
-       "  (function(spec, embedOpt) {\n",
-       "    const outputDiv = document.getElementById(\"altair-chart-685212b6aedb40a386847e5ef90228d7\");\n",
-       "    const urls = {\n",
-       "      \"vega\": \"http://localhost:57222/scripts/vega.js\",\n",
-       "      \"vega-lite\": \"http://localhost:57222/scripts/vega-lite.js\",\n",
-       "      \"vega-embed\": \"http://localhost:57222/scripts/vega-embed.js\",\n",
-       "    };\n",
-       "    function loadScript(lib) {\n",
-       "      return new Promise(function(resolve, reject) {\n",
-       "        var s = document.createElement('script');\n",
-       "        s.src = urls[lib];\n",
-       "        s.async = true;\n",
-       "        s.onload = () => resolve(urls[lib]);\n",
-       "        s.onerror = () => reject(`Error loading script: ${urls[lib]}`);\n",
-       "        document.getElementsByTagName(\"head\")[0].appendChild(s);\n",
-       "      });\n",
-       "    }\n",
-       "    function showError(err) {\n",
-       "      outputDiv.innerHTML = `<div class=\"error\" style=\"color:red;\">${err}</div>`;\n",
-       "      throw err;\n",
-       "    }\n",
-       "    function displayChart(vegaEmbed) {\n",
-       "      vegaEmbed(outputDiv, spec, embedOpt)\n",
-       "        .catch(err => showError(`Javascript Error: ${err.message}<br>This usually means there's a typo in your chart specification. See the javascript console for the full traceback.`));\n",
-       "    }\n",
-       "\n",
-       "    if(typeof define === \"function\" && define.amd) {\n",
-       "        // requirejs paths need '.js' extension stripped.\n",
-       "        const paths = Object.keys(urls).reduce(function(paths, package) {\n",
-       "            paths[package] = urls[package].replace(/\\.js$/, \"\");\n",
-       "            return paths\n",
-       "        }, {})\n",
-       "        requirejs.config({paths});\n",
-       "        require([\"vega-embed\"], displayChart, err => showError(`Error loading script: ${err.message}`));\n",
-       "    } else if (typeof vegaEmbed === \"function\") {\n",
-       "        displayChart(vegaEmbed);\n",
-       "    } else {\n",
-       "        loadScript(\"vega\")\n",
-       "            .then(() => loadScript(\"vega-lite\"))\n",
-       "            .then(() => loadScript(\"vega-embed\"))\n",
-       "            .catch(showError)\n",
-       "            .then(() => displayChart(vegaEmbed));\n",
-       "    }\n",
-       "  })({\"data\": {\"name\": \"data-89f1c4e69698a792a838760f428db649\"}, \"mark\": {\"type\": \"bar\", \"tooltip\": true}, \"encoding\": {\"x\": {\"field\": \"boro\", \"type\": \"nominal\"}, \"y\": {\"aggregate\": \"count\", \"field\": \"population\", \"type\": \"quantitative\"}}, \"$schema\": \"https://vega.github.io/schema/vega-lite/v4.17.0.json\", \"datasets\": {\"data-89f1c4e69698a792a838760f428db649\": [{\"boro\": \"NYC TOTAL\", \"population\": 8550971}, {\"boro\": \"BRONX\", \"population\": 1446788}, {\"boro\": \"BROOKLYN\", \"population\": 2648452}, {\"boro\": \"MANHATTAN\", \"population\": 1638281}, {\"boro\": \"QUEENS\", \"population\": 2330295}, {\"boro\": \"STATEN ISLAND\", \"population\": 487155}]}}, {});\n",
-       "</script>\n"
-      ],
+      "application/vnd.vegalite.v4+json": {
+       "$schema": "https://vega.github.io/schema/vega-lite/v4.17.0.json",
+       "data": {
+        "name": "data-89f1c4e69698a792a838760f428db649"
+       },
+       "datasets": {
+        "data-89f1c4e69698a792a838760f428db649": [
+         {
+          "boro": "NYC TOTAL",
+          "population": 8550971
+         },
+         {
+          "boro": "BRONX",
+          "population": 1446788
+         },
+         {
+          "boro": "BROOKLYN",
+          "population": 2648452
+         },
+         {
+          "boro": "MANHATTAN",
+          "population": 1638281
+         },
+         {
+          "boro": "QUEENS",
+          "population": 2330295
+         },
+         {
+          "boro": "STATEN ISLAND",
+          "population": 487155
+         }
+        ]
+       },
+       "encoding": {
+        "x": {
+         "field": "boro",
+         "type": "nominal"
+        },
+        "y": {
+         "aggregate": "count",
+         "field": "population",
+         "type": "quantitative"
+        }
+       },
+       "mark": {
+        "tooltip": true,
+        "type": "bar"
+       }
+      },
       "text/plain": [
-       "alt.Chart(...)"
+       "<VegaLite 4 object>\n",
+       "\n",
+       "If you see this message, it means the renderer has not been properly enabled\n",
+       "for the frontend that you are using. For more information, see\n",
+       "https://altair-viz.github.io/user_guide/troubleshooting.html\n"
       ]
      },
-     "execution_count": 31,
-     "metadata": {},
+     "execution_count": 35,
+     "metadata": {
+      "application/vnd.vegalite.v4+json": {
+       "inline": true
+      }
+     },
      "output_type": "execute_result"
     }
    ],
@@ -1266,8 +1273,9 @@
     "    x= alt.X(\"boro:N\"),\n",
     "    y=alt.Y(\"count(population)\"))\n",
     "\n",
-    "alt.renderers.enable('altair_viewer', inline=True)\n",
-    "chart\n"
+    "alt.renderers.enable('mimetype', inline=True)\n",
+    "chart\n",
+    "\n"
    ]
   }
  ],
