--- a/data_preprocessing.ipynb
+++ b/data_preprocessing.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -266,7 +266,7 @@
        "4  POINT (-73.76041066999993 40.67374017600008)  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -291,7 +291,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -312,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -373,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -382,7 +382,7 @@
        "(25596, 9344)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -404,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -519,7 +519,7 @@
        "12       longitude           0"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -555,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -812,7 +812,7 @@
        "[6 rows x 22 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -823,7 +823,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -833,7 +833,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -844,7 +844,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -917,7 +917,7 @@
        "5  STATEN ISLAND      487155"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -940,7 +940,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1032,7 +1032,7 @@
        "4  MULTIPOLYGON (((-73.82645 40.59053, -73.82642 ...  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1043,7 +1043,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1135,7 +1135,7 @@
        "4  MULTIPOLYGON (((-73.82645 40.59053, -73.82642 ...  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1151,7 +1151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1161,7 +1161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1186,7 +1186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1197,7 +1197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1259,7 +1259,86 @@
        "https://altair-viz.github.io/user_guide/troubleshooting.html\n"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "chart = alt.Chart(boro_pop).mark_bar(tooltip= True).encode(\n",
+    "    x= alt.X(\"boro:N\"),\n",
+    "    y=alt.Y(\"count(population)\"))\n",
+    "\n",
+    "alt.renderers.enable('mimetype')\n",
+    "chart\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.vegalite.v4+json": {
+       "$schema": "https://vega.github.io/schema/vega-lite/v4.17.0.json",
+       "data": {
+        "name": "data-89f1c4e69698a792a838760f428db649"
+       },
+       "datasets": {
+        "data-89f1c4e69698a792a838760f428db649": [
+         {
+          "boro": "NYC TOTAL",
+          "population": 8550971
+         },
+         {
+          "boro": "BRONX",
+          "population": 1446788
+         },
+         {
+          "boro": "BROOKLYN",
+          "population": 2648452
+         },
+         {
+          "boro": "MANHATTAN",
+          "population": 1638281
+         },
+         {
+          "boro": "QUEENS",
+          "population": 2330295
+         },
+         {
+          "boro": "STATEN ISLAND",
+          "population": 487155
+         }
+        ]
+       },
+       "encoding": {
+        "x": {
+         "field": "boro",
+         "type": "nominal"
+        },
+        "y": {
+         "aggregate": "count",
+         "field": "population",
+         "type": "quantitative"
+        }
+       },
+       "mark": {
+        "tooltip": true,
+        "type": "bar"
+       }
+      },
+      "text/plain": [
+       "<VegaLite 4 object>\n",
+       "\n",
+       "If you see this message, it means the renderer has not been properly enabled\n",
+       "for the frontend that you are using. For more information, see\n",
+       "https://altair-viz.github.io/user_guide/troubleshooting.html\n"
+      ]
+     },
+     "execution_count": 22,
      "metadata": {
       "application/vnd.vegalite.v4+json": {
        "inline": true
@@ -1269,13 +1348,9 @@
     }
    ],
    "source": [
-    "chart = alt.Chart(boro_pop).mark_bar(tooltip= True).encode(\n",
-    "    x= alt.X(\"boro:N\"),\n",
-    "    y=alt.Y(\"count(population)\"))\n",
+    "alt.renderers\n",
     "\n",
-    "alt.renderers.enable('mimetype', inline=True)\n",
-    "chart\n",
-    "\n"
+    "chart"
    ]
   }
  ],
