Update Readme and Main

--- a/main.ipynb
+++ b/main.ipynb
@@ -5,8 +5,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Importing all necessary libraries"
+    "##### Please follow this nbviewer link to view the project code and interactive charts: \n",
+    "https://nbviewer.org/github/damilare-osunleke/NYC_Shooting/blob/main/main.ipynb"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "attachments": {},
@@ -82,6 +88,14 @@
     "b) **geometry** : Polygon representing the geometry of the borough \n",
     "\n",
     "\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Importing all necessary libraries"
    ]
   },
   {
